# Just-a-Sample

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  FEATURES.md  Just a Sample.jucer  README.md  version.cmake
.github/workflows/: build_and_release.yml
Builds/MacOSX/: SampleNavigator.cpp
Patches/: apply_patch_if_needed.cmake  bungee_lower_cmake_and_set_num_octaves.patch  bungee_set_num_octaves.patch  leaf_more_selective_imports.patch
Releases/Linux/: install-dependencies.sh
Releases/Windows/: installer_setup.iss
Releases/macOS/: dmg_icon.icns  dmg_settings.py
Source/: BandEQ.h  Chorus.h  ComponentUtils.h  CustomComponent.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  CustomSamplerSound.cpp  CustomSamplerSound.h  CustomSamplerVoice.cpp  CustomSamplerVoice.h  Distortion.h  Effect.h  FilterResponse.cpp  FilterResponse.h  FxChain.cpp  FxChain.h  FxDragger.h  FxModule.cpp  FxModule.h  PitchDetector.h  PitchShifter.cpp  PitchShifter.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  SampleComponent.cpp  SampleComponent.h  SampleEditor.cpp  SampleEditor.h  SampleExplorer.cpp  SampleExplorer.h  SampleNavigator.cpp  SampleNavigator.h  SamplePainter.cpp  SamplePainter.h  TriReverb.h
Source/Components/: Button.h  Buttons.h  ComponentUtils.h  CustomAudioDeviceSelector.cpp  CustomAudioDeviceSelector.h  FxChain.cpp  FxChain.h  FxDragTarget.h  FxModule.cpp  FxModule.h  InputDeviceSelector.cpp  InputDeviceSelector.h  Paths.h  Prompt.h  RangeSelector.h  SampleEditor.cpp  SampleEditor.h  SampleLoaderArea.h  SampleNavigator.cpp  SampleNavigator.h
Source/Components/Displays/: ChorusVisualizer.cpp  ChorusVisualizer.h  DistortionVisualizer.cpp  DistortionVisualizer.h  FilterResponse.cpp  FilterResponse.h  ReverbResponse.cpp  ReverbResponse.h  SamplePainter.cpp  SamplePainter.h
Source/Sampler/: BlankSynthesizerSound.h  CustomSamplerSound.cpp  CustomSamplerSound.h  CustomSamplerVoice.cpp  CustomSamplerVoice.h  CustomSynthesizer.h  PitchShifter.cpp  PitchShifter.h  SamplerParameters.cpp  SamplerParameters.h  Stretcher.h
Source/Sampler/Effects/: BandEQ.h  Chorus.h  Distortion.h  Effect.h  Reverb.h  TriReverb.h
Source/Sampler/Effects/gin/: gin_simpleverb.cpp  gin_simpleverb.h
Source/Utilities/: BufferUtils.h  ComponentUtils.h  DeviceRecorder.h  ListenableAtomic.h  ListenableValue.h  PitchDetector.h  ProtectYourEars.h  SampleLoader.h
Source/Utilities/MTS/: libMTSClient.cpp
Source/Utilities/Reaper/: ReaperVST3Extensions.cpp  ReaperVST3Extensions.h  reaper_plugin.h  reaper_vst3_interfaces.h
